examples/good/maybe.gr
import Maybe

main : (Int, Int)
main = (someOr |1| (Some 2), someOr |3| None)
