examples/errors/badList.gr
foo : List 3 Int
foo = Cons 1 (Cons 2 Nil)